test_src/compiler_errors/types/boolean/GreaterThanBoolError2.b
class GreaterThanBoolError2 {
    void test() {
        println(true > 2);
    }
}
